# GrowerSlot

./: .env.example  .env.local  .replit  Admin_Addendum.md  B17_AUDIT_SYSTEM_VERIFICATION.md  B20_VERIFICATION.md  BLUEPRINT.md  Blueprint.md  CHANGELOG.md  E2E_VERIFICATION.md  FEATURES.md  ISSUES.md  README.md  RELEASE_CHECKLIST.md  SCAN_REPORT.md  VERIFICATION_REPORT.md  migration_completion_log.txt  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  rules.md  test_env.js  vitest.config.ts
_reports/: REPO_AUDIT.md  dead_code.json  deps-graph.json  features.json  inventory.json  routes.json
attached_assets/: Pasted-Add-site-wide-structured-logging-diagnostics-dev-friendly-prod-safe-Issue-Errors-are-hard-to-p-1755292318326_1755292318327.txt  Pasted-Audit-Identify-key-files-routes-functions-dead-code-Issue-We-ve-accumulated-legacy-and-redunda-1755336530770_1755336530771.txt  Pasted-Do-not-modify-any-files-Do-not-create-commits-Produce-a-detailed-diagnostic-report-on-the-DayTimel-1755171734260_1755171734260.txt  Pasted-Fix-Admin-Dashboard-auth-runtime-errors-verify-on-Admin-routes-only-Issue-In-the-Admin-Dashboar-1755295307515_1755295307516.txt  Pasted-Fix-runtime-error-access-token-noise-in-Admin-Issue-A-runtime-error-keeps-appearing-in-screen-and-1755293702751_1755293702752.txt  Pasted-Follow-the-rules-in-rules-md-Do-not-change-product-code-Add-one-changelog-line-in-BLUEPRINT-md-A-1755267980452_1755267980453.txt  Unified App Blueprint – Grower & Agri Supply Chain (replit)_1755079333173.docx  (+33 more)
client/: index.html
e2e/: admin_core.spec.ts  (+1 more)
(+175 files in other folders)
